--- a/WebApp/Views/HealthCareTeam/Index.cshtml
+++ b/WebApp/Views/HealthCareTeam/Index.cshtml
@@ -264,93 +264,17 @@
                                 </div>
                             </div>
                         </div>@*step1*@
-                        
-
                         <div class="modal fade" id="myModal8" tabindex="-1" role="dialog" aria-labelledby="myModalLabel8">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                    </div><!--/.modal header-->
+                            <div class="modal-dialog" role="document" style="border-bottom: 0;">
+                                <div id='DoctorProfileContent' class="modal-content" style="overflow:auto; border-radius: 0;">
 
-                                    <div class="modal-body text-left">
-                                        <div class="row">
-                                            <div class="col-sm-12">
-                                                <img class="gray-bdr-b-1" src="../Content/images/us_map.jpg" alt="" style="width:100%;">
-                                            </div>
-                                        </div>
-                                        <div class="row p-30">
-                                            <div class="col-lg-4 col-md-4 col-sm-12">
-                                                <div class="dr_info w-bg box-s">
-                                                    <div class="map-box">
-                                                        <div class="box-inner">
-                                                            <img src="../Content/images/img.jpg" alt="" class="m-b-10 img-circle img-responsive">
-                                                        </div>
-                                                        <a class="hrt" href="#" style="color: #5A738E; left: 10px;"><span class="fa fa-heart-o" aria-hidden="true"></span></a>
-                                                        <a class="hrt1" href="#" style="color: #5A738E; left: 10px;"><span class="fa fa-heart" aria-hidden="true"></span></a>
-                                                        <i class="popup-circle fa fa-circle" aria-hidden="true" style="color: red;"></i>
-                                                        <h2 class="text-center">Dr. susan Diamond</h2>
-                                                        <p class="text-center m-0" style="color: green;">Available for Call</p>
-                                                        <p class="ratings m-t-0 m-b-5" style="text-align: center;">
-
-                                                            <a href="#"><span class="fa fa-star"></span></a>
-                                                            <a href="#"><span class="fa fa-star"></span></a>
-                                                            <a href="#"><span class="fa fa-star"></span></a>
-                                                            <a href="#"><span class="fa fa-star"></span></a>
-                                                            <a href="#"><span class="fa fa-star-o"></span></a>
-                                                        </p>
-                                                        <div class="gray-bdr-b-1"></div>
-                                                        <p class="m-tb-15"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp Location: Dallas, TX</p>
-                                                        <div class="gray-bdr-b-1"></div>
-                                                        <p class="m-tb-15"><i class="fa fa-mobile" aria-hidden="true"></i>&nbsp Mobile: 555-555-5555</p>
-                                                        <div class="gray-bdr-b-1"></div>
-                                                        <div class="row green-bg-sec">
-                                                            <div class="col-lg-6 col-md-12 col-sm-12">
-                                                                <button type="button" class="m-t-20 btn btn-primary w-100"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp Call</button>
-                                                            </div>
-                                                            <div class="col-lg-6 col-md-12 col-sm-12">
-                                                                <input type="text" style="display:none" id="docscheduleid">
-                                                                <a href="#" class="thumbnail-col-inner m-t-20 btn btn-primary w-100" data-toggle="modal" data-target="#myModal1" onclick="showDoctorTimings($('#docscheduleid').val())"><i class="fa fa-calendar" aria-hidden="true"></i>&nbsp Schedule</a>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-8 col-md-8 col-sm-12">
-                                                <h4><i class="fa fa-user" style="width: 20px;" aria-hidden="true"></i>&nbsp <b>About me:</b></h4>
-                                                <p style="padding-left: 30px;">I am married and the mother of 5 childern. I regularly exercise, doing weights and resistance training 3 times a week and I swim laps in addition almost every day.</p>
-                                            </div>
-                                        </div>
-
-                                        <div class="gray-bg p-30 gray-light-bdr-t-1">
-                                            <div class="row">
-                                                <div class="col-md-4"></div>
-                                                <div class="col-md-8">
-                                                    <h4><i class="fa fa-user-md" style="width: 20px;" aria-hidden="true"></i>&nbsp <b>My Specialties:</b></h4>
-                                                    <p style="padding-left: 30px;">Internal Medicine</p>
-
-                                                    <h4><i class="fa fa-graduation-cap" style="width: 20px;" aria-hidden="true"></i>&nbsp <b>Qualifications:</b></h4>
-                                                    <p style="padding-left: 30px;">TEXAS, UTAH, NEWYORK, VIRGINIA</p>
-
-                                                    <h4><i class="fa fa-map-marker" style="width: 20px;" aria-hidden="true"></i>&nbsp <b>Licensed State(s):</b></h4>
-
-                                                    <h4><i class="fa fa-graduation-cap" style="width: 20px;" aria-hidden="true"></i>&nbsp <b>Education:</b></h4>
-                                                    <p style="padding-left: 30px;">I attended the university of Pennsylvania for undergraduate and medical school. I then went on to University of Taxes Southwestern Medical School in Dallas where I did my internal Medicine training and my Nephrology fellowship.</p>
-
-                                                    <h4><i class="fa fa-book" style="width: 20px;" aria-hidden="true"></i>&nbsp <b>Publications:</b></h4>
-
-                                                    <h4><i class="fa fa-map-marker" style="width: 20px;" aria-hidden="true"></i>&nbsp <b>Location:</b></h4>
-                                                    <p style="padding-left: 30px;">Dallas, TX</p>
-
-                                                    <h4><i class="fa fa-language" style="width: 20px;" aria-hidden="true"></i>&nbsp <b>languages Spoken:</b></h4>
-                                                    <p style="padding-left: 30px;">English</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div><!--/.modal body-->
                                 </div>
+
+
                             </div>
                         </div><!-- col4 -->
+
+                        
                         <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
@@ -1026,6 +950,15 @@
         });
 
     }
+    function showProfile(docid) {
+
+        var did=docid;//$("#pvdocid").val();
+
+        $("#DoctorProfileContent").load('@Url.Action("DoctorProfile", "SeeDoctor")?doctorID='+did, function () {
+
+        });
+
+    };
     var reader1  = new FileReader();
     var reader2  = new FileReader();
     var reader3  = new FileReader();
